Polishing and add options and contact us.

--- a/findaword/common/common.css
+++ b/findaword/common/common.css
@@ -50,6 +50,8 @@ div {
 
 img { 
     border: none; 
+    width:100%;
+    height: auto;
 }
 
 
@@ -214,11 +216,11 @@ ul.style_bullet {
     font-variant: normal;
     font-weight: normal;
     letter-spacing: 0;
-    line-height: 2.0em;
-    margin-bottom: 0px;
+    line-height: 1.0em;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
     margin-left: 0px;
     margin-right: 0px;
-    margin-top: 0px;
     opacity: 1.00;
     padding-bottom: 0px;
     padding-top: 0px;
@@ -238,7 +240,7 @@ ul.style_bullet {
     font-variant: normal;
     font-weight: 400;
     letter-spacing: 0;
-    line-height: 1.0em;
+    line-height: 1.1em;
     margin-bottom: 0px;
     margin-left: 0px;
     margin-right: 10px;
@@ -247,6 +249,29 @@ ul.style_bullet {
     padding-bottom: 6px;
     padding-top: 0px;
     text-align: left;
+    text-decoration: none;
+    text-indent: 0px;
+    text-transform: none;
+}
+
+.style_wrap_up {
+    color: rgb(80, 120, 256);
+    font-family: 'AmericanTypewriter', 'American Typewriter', 'Courier', serif;
+    font-size: 2.0em;
+    font-stretch: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 400;
+    letter-spacing: 0;
+    line-height: 1.1em;
+    margin-top: 1.5em;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 10px;
+    opacity: 1.00;
+    padding-bottom: 6px;
+    padding-top: 0px;
+    text-align: center;
     text-decoration: none;
     text-indent: 0px;
     text-transform: none;
@@ -320,8 +345,8 @@ ol {
 }
 .inline-block {
     display: inline-block;
-    vertical-align: baseline;
-    margin-bottom:0.3em;
+    vertical-align: middle;
+    margin-bottom: 0.3em;
 }
 
 /* Actions */
@@ -358,25 +383,18 @@ a:hover {
 
 /* Screen Size Detection Color Fitting */
 
-.main_height_controller {
-	background: rgb(220, 256, 256);
-}
-
-@media screen and (max-width: 695px) {
-	.main_height_controller {
-		background: rgb(256, 220, 256);
-	}
-}
-
-@media screen and (max-width: 435px) {
-	.main_height_controller {
-		background: rgb(256, 256, 220);
-	}
-}
-
-@media screen and (max-width: 350px) {
-	.main_height_controller {
-		background: rgb(220, 220, 220);
-	}
-}
+/* .main_height_controller {                                         background: rgb(220, 255, 255); }     /* Light blue - Portrait */
+/* @media screen and (max-width: 1367px) { .main_height_controller { background: rgb(  0, 255, 255); } }   /* Bright green - Landscape */
+/* @media screen and (max-width: 1113px) { .main_height_controller { background: rgb(255, 255,   0); } }   /* Yellow - Portrait  */
+/* @media screen and (max-width: 1025px) { .main_height_controller { background: rgb(160, 190, 255); } }   /* Blue - Portrait & Landscape  */
+/* @media screen and (max-width:  835px) { .main_height_controller { background: rgb(255,   0,   0); } }   /* Bright red - Landscape */
+/* @media screen and (max-width:  813px) { .main_height_controller { background: rgb(255,   0, 255); } }   /* Bright cyan - Landscape */
+/* @media screen and (max-width:  769px) { .main_height_controller { background: rgb(255, 160, 160); } }   /* Red - Portrait  */
+/* @media screen and (max-width:  737px) { .main_height_controller { background: rgb(122, 122, 122); } }   /* Deep gray - Landscape */
+/* @media screen and (max-width:  668px) { .main_height_controller { background: rgb(  0,   0, 255); } }   /* Bright blue - Landscape */
+/* @media screen and (max-width:  569px) { .main_height_controller { background: rgb(200, 200, 200); } }   /* Light gray - Landscape */
+/* @media screen and (max-width:  481px) { .main_height_controller { background: rgb(240, 240, 240); } }   /* Almost white - Landscape */
+/* @media screen and (max-width:  415px) { .main_height_controller { background: rgb(220, 255, 220); } }   /* Light green - Portrait  */
+/* @media screen and (max-width:  376px) { .main_height_controller { background: rgb(255, 255, 220); } }   /* Light yellow - Portrait  */
+/* @media screen and (max-width:  321px) { .main_height_controller { background: rgb(255, 220, 255); } }   /* Light pink - Portrait  */
 
