--- a/findaword/One_Word_Single_files/One_Word_Single.css
+++ b/findaword/One_Word_Single_files/One_Word_Single.css
@@ -1,35 +1,20 @@
 /* NEW STUFF */
 
-/* FORMATTING FOR TOP QUOTE AND MAX SCREEN SIZE*/
-/* 1 line plus name */
-.main_height_controller {
-	height: 3910px;
-	line-height: 3910px;
-}
-
-/* 2 lines plus name */
-@media screen and (max-width: 695px) {
-	.main_height_controller {
-		height: 4110px;
-		line-height: 4110px;
-	}
-}
-
-/* 3 lines plus name */
-@media screen and (max-width: 435px) {
-	.main_height_controller {
-		height: 4310px;
-		line-height: 4310px;
-	}
-}
-
-/* 4 lines plus name */
-@media screen and (max-width: 350px) {
-	.main_height_controller {
-		height: 4450px;
-		line-height: 4450px;
-	}
-}
+/* SCREEN SIZE */
+.main_height_controller {                                         height: 3780px; line-height: 3780px; }
+@media screen and (max-width: 1367px) { .main_height_controller { height: 3840px; line-height: 3840px; } }   /* • Landscape */
+@media screen and (max-width: 1113px) { .main_height_controller { height: 3850px; line-height: 3850px; } }   /* • Portrait */
+@media screen and (max-width: 1025px) { .main_height_controller { height: 3870px; line-height: 3870px; } }   /* • Portrait & Landscape */
+@media screen and (max-width:  835px) { .main_height_controller { height: 3890px; line-height: 3890px; } }   /* • Landscape */
+@media screen and (max-width:  813px) { .main_height_controller { height: 3940px; line-height: 3940px; } }   /* • Landscape */
+@media screen and (max-width:  769px) { .main_height_controller { height: 3950px; line-height: 3950px; } }   /* • Portrait */
+@media screen and (max-width:  737px) { .main_height_controller { height: 3980px; line-height: 3980px; } }   /* • Landscape */
+@media screen and (max-width:  668px) { .main_height_controller { height: 4060px; line-height: 4060px; } }   /* • Landscape */
+@media screen and (max-width:  569px) { .main_height_controller { height: 4150px; line-height: 4150px; } }   /* • Landscape */
+@media screen and (max-width:  481px) { .main_height_controller { height: 4220px; line-height: 4220px; } }   /* • Landscape */
+@media screen and (max-width:  415px) { .main_height_controller { height: 4310px; line-height: 4310px; } }   /* • Portrait */
+@media screen and (max-width:  376px) { .main_height_controller { height: 4460px; line-height: 4460px; } }   /* • Portrait */
+@media screen and (max-width:  321px) { .main_height_controller { height: 4530px; line-height: 4530px; } }   /* • Portrait */
 
 /* OLD STUFF */
 
@@ -37,3 +22,7 @@
     padding: 4px;
 }
 
+img.animated-gif{
+  width: 290px;
+  height: auto;
+}
