--- a/findaword/One_Word_Range_files/One_Word_Range.css
+++ b/findaword/One_Word_Range_files/One_Word_Range.css
@@ -1,41 +1,20 @@
 /* NEW STUFF */
 
-/* FORMATTING FOR TOP QUOTE AND MAX SCREEN SIZE*/
-/* 1 line plus name */
-.main_height_controller {
-	height: 4000px;
-	line-height: 4000px;
-	background: rgb(220, 256, 256);
-}
-
-/* 2 lines plus name */
-@media screen and (max-width: 695px) {
-	.main_height_controller {
-		height: 4230px;
-		line-height: 4230px;
-		background: rgb(256, 220, 256);
-	}
-}
-
-/* 3 lines plus name */
-@media screen and (max-width: 435px) {
-	.main_height_controller {
-		height: 4460px;
-		line-height: 4460px;
-		background: rgb(256, 256, 220);
-	}
-}
-
-/* 4 lines plus name */
-@media screen and (max-width: 350px) {
-	.main_height_controller {
-		height: 4500px;
-		line-height: 4500px;
-		background: rgb(220, 220, 220);
-	}
-}
-
-/* OLD STUFF */
+/* SCREEN SIZE */
+.main_height_controller {                                         height: 4000px; line-height: 4000px; }
+@media screen and (max-width: 1367px) { .main_height_controller { height: 4100px; line-height: 4100px; } }   /* • Landscape */
+@media screen and (max-width: 1113px) { .main_height_controller { height: 4120px; line-height: 4120px; } }   /* • Portrait */
+@media screen and (max-width: 1025px) { .main_height_controller { height: 4200px; line-height: 4200px; } }   /* • Portrait & Landscape */
+@media screen and (max-width:  835px) { .main_height_controller { height: 4230px; line-height: 4230px; } }   /* • Landscape */
+@media screen and (max-width:  813px) { .main_height_controller { height: 4250px; line-height: 4250px; } }   /* • Landscape */
+@media screen and (max-width:  769px) { .main_height_controller { height: 4280px; line-height: 4280px; } }   /* • Portrait */
+@media screen and (max-width:  737px) { .main_height_controller { height: 4340px; line-height: 4340px; } }   /* • Landscape */
+@media screen and (max-width:  668px) { .main_height_controller { height: 4460px; line-height: 4460px; } }   /* • Landscape */
+@media screen and (max-width:  569px) { .main_height_controller { height: 4640px; line-height: 4640px; } }   /* • Landscape */
+@media screen and (max-width:  481px) { .main_height_controller { height: 4800px; line-height: 4800px; } }   /* • Landscape */
+@media screen and (max-width:  415px) { .main_height_controller { height: 4890px; line-height: 4890px; } }   /* • Portrait */
+@media screen and (max-width:  376px) { .main_height_controller { height: 5110px; line-height: 5110px; } }   /* • Portrait */
+@media screen and (max-width:  321px) { .main_height_controller { height: 5130px; line-height: 5130px; } }   /* • Portrait */
 
 .style {
     padding: 4px;
